# Cargo.toml

[package]
name = "free-flight-stabilization"
version = "0.1.0"
authors = [
    "Brendan Sechter <sgeos@hotmail.com>",
    "AeroRust <aerospace.rust@gmail.com>",
]
categories = [
    "aerospace::drones",
    "aerospace::unmanned-aerial-vehicles",
    "algorithms",
    "embedded",
    "no-std::no-alloc",
]
description = "PID flight stabilization functions. no_std, no-alloc."
edition = "2021"
keywords = [
    "automation",
    "control-systems",
    "embedded",
    "pid",
]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/AeroRust/free-flight-stabilization"

[dependencies]
num-traits = "0.2.18"
piddiy = "0.1.1"

[dev-dependencies]
fixed = { version = "1.27.0", features = ["num-traits"] }
libc = "0.2.154"
