# Cargo.toml

[package]
name = "free-flight-stabilization"
version = "0.1.0"
authors = [
    "Brendan Sechter <sgeos@hotmail.com>",
    "AeroRust <aerospace.rust@gmail.com>",
]
categories = [
    "aerospace::drones",
    "aerospace::unmanned-aerial-vehicles",
    "algorithms",
    "embedded",
    "no-std::no-alloc",
]
description = "PID flight stabilization functions. no_std, no-alloc."
edition = "2021"
keywords = [
    "automation",
    "control-systems",
    "embedded",
    "pid",
]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/AeroRust/free-flight-stabilization"

rust-version = "1.71"

[features]
default = []
std = ["num-traits/std", "piddiy/std", "fixed/std"]

[dependencies]
num-traits = { version = "0.2", default-features = false }
piddiy = "0.1.1"

[dev-dependencies]
fixed = { version = "1.28", features = ["num-traits"] }
libc = { version = "0.2", default-features = false }

[patch.crates-io]
piddiy = { version = "0.1.1", git = "https://github.com/LechevSpace/piddiy", branch = "fix/no_std-num-trait-for-float-numbers" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
